issues in spacing etc and links added

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -194,8 +194,8 @@ main {
   padding: 6px 14px;
   border-radius: 4px;
   border: 1px solid var(--color-theme-primary);
-  color: var(--color-theme-primary);
-  background-color: var(--color-theme-accent);
+  color: #fff;
+  background-color: var(--color-theme-primary);
   display: none;
 }
 .toggle-nav button i {
