--- a/src/components/sectionImgWithTextDesc/sectionImgWithText.css
+++ b/src/components/sectionImgWithTextDesc/sectionImgWithText.css
@@ -38,6 +38,7 @@
 @media screen and (max-width: 768px) {
   .styled-img-container {
     width: 100%;
+    margin-top: 20px;
     padding: 0px;
     height: auto;
     display: flex;
